[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/UI/Capture it.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/UI/UI.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/UI_font.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -4.0
margin_right = 4.0
margin_bottom = 4.0

[node name="main" type="Panel" parent="."]
anchor_left = 0.84082
anchor_top = 0.918333
anchor_right = 1.0459
anchor_bottom = 0.983333
margin_left = -53.0
margin_top = 3.0
margin_right = -53.0
margin_bottom = 3.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer2" type="HBoxContainer" parent="main"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 31
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="main/HBoxContainer2"]
margin_right = 74.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Wood_label" type="Label" parent="main/HBoxContainer2/HBoxContainer"]
margin_top = 10.0
margin_right = 56.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 4 )
text = "WOOD: "

[node name="Wood_amount" type="Label" parent="main/HBoxContainer2/HBoxContainer"]
margin_left = 60.0
margin_top = 10.0
margin_right = 74.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 4 )
text = "0 "

[node name="HBoxContainer2" type="HBoxContainer" parent="main/HBoxContainer2"]
margin_left = 105.0
margin_right = 183.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Rock_label" type="Label" parent="main/HBoxContainer2/HBoxContainer2"]
margin_top = 10.0
margin_right = 60.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 4 )
text = "ROCKS: "

[node name="Rock_amount" type="Label" parent="main/HBoxContainer2/HBoxContainer2"]
margin_left = 64.0
margin_top = 10.0
margin_right = 78.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 4 )
text = "0 "

[node name="Pause" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0.556863 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -20.0
margin_right = 62.5
margin_bottom = 20.0

[node name="resume" type="Button" parent="Pause/VBoxContainer"]
margin_right = 127.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 3 )
text = "RESUME"

[node name="save" type="Button" parent="Pause/VBoxContainer"]
margin_top = 29.0
margin_right = 127.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 3 )
text = "SAVE"

[node name="save_quit" type="Button" parent="Pause/VBoxContainer"]
margin_top = 58.0
margin_right = 127.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 3 )
text = "SAVE AND QUIT"

[node name="reset" type="Button" parent="Pause/VBoxContainer"]
margin_top = 87.0
margin_right = 127.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 3 )
text = "RESET WORLD!!"

[node name="save_status" type="Label" parent="Pause"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -72.5
margin_top = -14.0
margin_right = 72.5
text = "-----------------------------"
align = 1

[connection signal="pressed" from="Pause/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/save_quit" to="." method="_on_save_quit_pressed"]
[connection signal="pressed" from="Pause/VBoxContainer/reset" to="." method="_on_reset_pressed"]
